# Cartan-Skia

./: Cargo.toml  README.md
src/: main.rs
src/app/: application.rs  mod.rs
src/icon/: main.rs  renderer.rs
src/rendering/: mod.rs  renderer.rs
src/rendering/browser/: mod.rs  ui_body.rs  ui_manager.rs
src/rendering/browser/elements/: button.rs  common.rs  element.rs  mod.rs  row.rs  styles.rs
src/rendering/browser/internal/: element_id_generator.rs  mod.rs
src/rendering/browser/layout/: layout_manager.rs  mod.rs  row_layout_manager.rs  size_evaluator.rs  space_allocation_manager.rs  space_allocation_plan_enacter.rs  space_allocation_plan_manager.rs  space_allocation_planner.rs  space_allocator.rs  space_deficit_resolver.rs  space_distribution_manager.rs  space_distributor.rs  space_requester.rs  types.rs
src/rendering/webpage_renderer/: mod.rs
src/window/: mod.rs
